@@ -1,9 +1,12 @@
 package auction.client.controller;
 
-import javafx.event.ActionEvent;
+import auction.client.exception.AuctionClosedException;
+import auction.client.exception.InvalidBidException;
+import auction.client.model.Product;
+import auction.client.network.AuctionClient;
+import auction.client.service.AuctionService;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
-import javafx.scene.chart.LineChart;
 import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
@@ -13,11 +16,11 @@ import java.net.URL;
 import java.util.ResourceBundle;
 import java.util.function.UnaryOperator;
 
+import static auction.client.network.AuctionClient.sendBidToServer;
+
 public class AuctionDetailController implements Initializable {
 
-    // ========================================================
     // 1. KHAI BÁO CÁC BIẾN GIAO DIỆN (@FXML)
-    // ========================================================
     @FXML
     private Label breadcrumbLabel;
     @FXML
@@ -38,30 +41,30 @@ public class AuctionDetailController implements Initializable {
     private Label descriptionLabel;
     @FXML
     private TextField bidAmountField;
-    @FXML
-    private LineChart<String, Number> priceHistoryChart;
 
+    // ✅ Service instance
+    private final AuctionService auctionService = new AuctionService();
     private double currentMinimumBid = 0;
+    private Product currentProduct = null;  // ✅ LƯU PRODUCT HIỆN TẠI
 
-    // ========================================================
+    // ✅ Thông tin người dùng (tạm thời - cần lấy từ session login)
+    private int currentUserId = 1;  // TODO: Lấy từ User login
+    private int currentAuctionId = 1;  // TODO: Lấy từ Product ID
+
     // 2. HÀM KHỞI TẠO (Bộ lọc thông minh không làm mất focus)
-    // ========================================================
     @Override
     public void initialize(URL location, ResourceBundle resources) {
         UnaryOperator<TextFormatter.Change> filter = change -> {
             String text = change.getText();
             if (!text.matches("[0-9]*")) {
-                // Tự động xóa chữ cái, chỉ giữ lại số
                 change.setText(text.replaceAll("[^0-9]", ""));
             }
-            return change; // Trả về change để giữ nguyên con trỏ chuột
+            return change;
         };
         bidAmountField.setTextFormatter(new TextFormatter<>(filter));
     }
 
-    // ========================================================
     // 3. HÀM ĐỔ DỮ LIỆU TỪ TRANG MAIN
-    // ========================================================
     public void setProductData(String name, String price, String imageUrl,
                                String condition, String productId,
                                String nextBid, String storeName, String description) {
@@ -80,99 +83,148 @@ public class AuctionDetailController implements Initializable {
             productImage.setImage(new Image(imageUrl));
         }
 
+        // ✅ TẠO PRODUCT OBJECT VÀ LƯU LẠI
+        currentProduct = new Product(name, price, imageUrl, description);
+
+        // ✅ Sử dụng service để extract giá
         try {
-            String cleanNumber = nextBid.replaceAll("[^0-9]", "");
-            currentMinimumBid = Double.parseDouble(cleanNumber);
+            currentMinimumBid = auctionService.extractPriceFromString(nextBid);
         } catch (Exception e) {
             currentMinimumBid = 0;
         }
     }
 
-    // ========================================================
-    // 4. HÀM ĐẶT GIÁ (Xử lý logic và gọi Popup)
-    // ========================================================
+    // 4. HÀM ĐẶT GIÁ (Sử dụng AuctionService để validate)
+    /**
+     * 4. HÀM ĐẶT GIÁ
+     * Controller chỉ:
+     * - lấy input từ UI
+     * - gọi service
+     * - hiển thị popup
+     */
     @FXML
-    public void placeBid(ActionEvent event) {
-        String bidText = bidAmountField.getText();
+    public void placeBid() {
 
-        if (bidText == null || bidText.trim().isEmpty()) {
-            showErrorPopup("Lỗi nhập liệu", "Vui lòng nhập số tiền bạn muốn đấu giá!");
+        // Kiểm tra product có được tải chưa
+        if (currentProduct == null) {
+            showErrorPopup("Lỗi", "Sản phẩm chưa được tải!");
             return;
         }
 
-        try {
-            double bidAmount = Double.parseDouble(bidText);
+        // Lấy giá user nhập
+        String bidText = bidAmountField.getText();
 
-            if (bidAmount < currentMinimumBid) {
-                showErrorPopup("Giá đặt không hợp lệ",
-                        "Mức giá của bạn quá thấp.\nVui lòng đặt lớn hơn hoặc bằng " + String.format("%,.0f", currentMinimumBid) + " VNĐ.");
-                return;
+        try {
+
+            // 1. Validate bid bằng service
+            auctionService.validateBid(bidText, currentMinimumBid);
+
+            // 2. Parse thành số
+            double bidAmount =
+                    auctionService.parseBidAmount(bidText);
+
+            // 3. ✅ Gọi service với currentProduct (KHÔNG PHẢI NULL)
+            auctionService.placeBid(currentProduct, bidAmount);
+
+            // 4. 🌐 GỬI REQUEST LÊN SERVER
+            boolean serverResponse = AuctionClient.sendBidToServer(
+                    currentAuctionId,
+                    currentUserId,
+                    bidAmount
+            );
+
+            // 5. Hiển thị kết quả
+            if (serverResponse) {
+                showSuccessPopup(
+                        "Đấu giá hợp lệ",
+                        "Chúc mừng! Giá đấu của bạn đã được ghi nhận trên server."
+                );
+            } else {
+                showErrorPopup(
+                        "Cảnh báo",
+                        "Giá đặt hợp lệ nhưng không gửi được lên server.\n" +
+                                "Vui lòng kiểm tra kết nối!"
+                );
             }
 
-            // Thành công
-            System.out.println("Backend log: Đặt giá " + bidAmount + " thành công!");
-            showSuccessPopup("Đấu giá hợp lệ", "Chúc mừng! Giá đấu của bạn đã được ghi nhận và đang là mức giá cao nhất hiện tại.");
+            // 6. Cập nhật giá trên UI
+            currentPriceLabel.setText(currentProduct.price);
+            currentMinimumBid = auctionService.calculateNextMinimumBid(
+                    auctionService.extractPriceFromString(currentProduct.price)
+            );
+            nextBidLabel.setText("* Giá đặt tiếp theo tối thiểu: " +
+                    auctionService.formatPrice(currentMinimumBid) + " VNĐ");
+
+            // 7. Clear input
             bidAmountField.clear();
 
-        } catch (NumberFormatException e) {
-            showErrorPopup("Lỗi hệ thống", "Định dạng số tiền không đúng!");
+        }
+        catch (InvalidBidException e) {
+
+            // Lỗi giá đặt không hợp lệ
+            showErrorPopup("Giá đặt không hợp lệ", e.getMessage());
+
+        }
+        catch (AuctionClosedException e) {
+
+            // Phiên đấu giá đã đóng
+            showErrorPopup("Phiên đã đóng", e.getMessage());
+
+        }
+        catch (Exception e) {
+
+            // Lỗi hệ thống
+            showErrorPopup(
+                    "Lỗi hệ thống",
+                    "Có lỗi xảy ra khi xử lý đấu giá: " + e.getMessage()
+            );
         }
     }
 
-    // ========================================================
-    // 5. CẬP NHẬT: POPUP THEME HONKAI: STAR RAIL (HSR)
-    // ========================================================
-
-    // Hàm gọi Popup Báo Lỗi HSR (Màu Đỏ/Maroon)
     private void showErrorPopup(String title, String message) {
         showCustomPopup(Alert.AlertType.ERROR, title, message, "#e74c3c", "❌");
     }
 
-    // Hàm gọi Popup Thành Công HSR (Màu Vàng Kim/Amber)
     private void showSuccessPopup(String title, String message) {
-        showCustomPopup(Alert.AlertType.INFORMATION, title, message, "#D8A95C", "🎉");
+        showCustomPopup(Alert.AlertType.INFORMATION, title, message, "#27AE60", "✅");
     }
 
-    // Lõi tạo Popup HSR: Thiết kế lại hoàn toàn DialogPane
     private void showCustomPopup(Alert.AlertType type, String title, String message, String hexColor, String emojiIcon) {
         Alert alert = new Alert(type);
-        alert.setTitle("TÍN HIỆU HỆ THỐNG"); // Thay đổi tiêu đề cho phù hợp chủ đề sci-fi
+        alert.setTitle("TÍN HIỆU HỆ THỐNG");
         alert.setHeaderText(null);
-        alert.setGraphic(null); // Bỏ icon mặc định của JavaFX
+        alert.setGraphic(null);
 
-        // --- CẤU TRÚC LẠI NỘI DUNG POPUP ---
-        VBox content = new VBox(15); // Tăng spacing
+
+        VBox content = new VBox(15);
         content.setStyle(
                 "-fx-alignment: center;" +
                         "-fx-padding: 30px 40px;" +
-                        "-fx-background-color: #0B0B10;" + // Màu nền tối sâu (deep dark)
-                        "-fx-background-radius: 4px;" // Bo góc nhẹ
+                        "-fx-background-color: #0B0B10;" +
+                        "-fx-background-radius: 4px;"
         );
 
-        // Icon Emoji bự hơn
         Label iconLabel = new Label(emojiIcon);
-        iconLabel.setStyle("-fx-font-size: 60px;"); // Icon rất bự ở giữa
+        iconLabel.setStyle("-fx-font-size: 60px;");
 
-        // Tiêu đề HSR: Viết hoa, đậm, màu điểm nhấn
-        Label titleLabel = new Label(title.toUpperCase()); // Viết hoa toàn bộ
+        Label titleLabel = new Label(title.toUpperCase());
         titleLabel.setStyle(
                 "-fx-font-size: 22px;" +
                         "-fx-font-weight: bold;" +
-                        "-fx-font-family: 'Segoe UI', system-ui, sans-serif;" + // Font chữ hiện đại
+                        "-fx-font-family: 'Segoe UI', system-ui, sans-serif;" +
                         "-fx-text-fill: " + hexColor + ";" +
-                        "-fx-letter-spacing: 2px;" // Thêm spacing giữa các chữ
+                        "-fx-letter-spacing: 2px;"
         );
 
-        // Nội dung thông báo HSR: Màu xám sáng (A0A0B0), căn giữa
         Label messageLabel = new Label(message);
         messageLabel.setStyle(
                 "-fx-font-size: 15px;" +
-                        "-fx-text-fill: #A0A0B0;" + // Màu chữ xám sáng (A0A0B0)
+                        "-fx-text-fill: #A0A0B0;" +
                         "-fx-text-alignment: center;" +
                         "-fx-font-family: 'Segoe UI', system-ui, sans-serif;"
         );
         messageLabel.setWrapText(true);
-        messageLabel.setMaxWidth(350); // Tăng chiều rộng tối đa
+        messageLabel.setMaxWidth(350);
 
         // Gom tất cả vào khối
         content.getChildren().addAll(iconLabel, titleLabel, messageLabel);
@@ -182,19 +234,19 @@ public class AuctionDetailController implements Initializable {
         dialogPane.setContent(content);
         dialogPane.setStyle(
                 "-fx-background-color: #0B0B10;" +
-                        "-fx-border-color: #4A4A5A;" + // Viền kim loại tối
-                        "-fx-border-width: 1px 1px 1px 4px;" + // Viền trái dày hơn làm điểm nhấn
+                        "-fx-border-color: #4A4A5A;" +
+                        "-fx-border-width: 1px 1px 1px 4px;" +
                         "-fx-border-radius: 4px;" +
                         "-fx-background-radius: 4px;" +
-                        "-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.6), 15, 0.5, 0, 0);" // Đổ bóng sâu
+                        "-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.6), 15, 0.5, 0, 0);"
         );
 
-        // Tùy chỉnh Nút bấm HSR
-        Button okButton = (Button) dialogPane.lookupButton(alert.getButtonTypes().get(0));
-        okButton.setText("XÁC NHẬN"); // Thay đổi chữ nút bấm
+
+        Button okButton = (Button) dialogPane.lookupButton(alert.getButtonTypes().getFirst());
+        okButton.setText("XÁC NHẬN");
         okButton.setStyle(
-                "-fx-background-color: linear-gradient(to bottom, #242430, #1A1A24);" + // Gradient tối
-                        "-fx-text-fill: #D8A95C;" + // Chữ màu vàng kim (Amber)
+                "-fx-background-color: linear-gradient(to bottom, #242430, #1A1A24);" +
+                        "-fx-text-fill: #D8A95C;" +
                         "-fx-border-color: #4A4A5A;" +
                         "-fx-border-radius: 2px;" +
                         "-fx-background-radius: 2px;" +
